Handle clicks on the web page to change text

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <h1>Person Stats</h1>
+
+    <p id=instructions>'Welcome to my groovy app'</p>
+
+    <button>'click me'</button>
     
-  </body>
     <script src="index.js"></script>
-    
+  </body>
+   
+
 </html>    
