Change heading when form is submitted

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <body>
     <h1>Person Stats</h1>
 
-    <p id=instructions>'Welcome to my groovy app'</p>
-
-    <button>'click me'</button>
-    
+    <form id="person-form">
+        <p>
+            <label for="personName">Name</label>
+            <input type="text" name="personName">
+        </p>
+        <button type="submit">Go</button>
+    </form>
     <script src="index.js"></script>
   </body>
    
