--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>Person Stats</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" type="text/css" rel="stylesheet"> 
   </head>
+
   <body>
     <h1>Person Stats</h1>
+
+    <p>This is my creation!</p>
+
+    <div id="stats">
+        <p id="stats-p">This is a paragraph</p>
+    </div>
 
     <form id="person-form">
         <p>
@@ -17,6 +25,23 @@
         </p>
         <button type="submit">Go</button>
     </form>
+
+    <form id="input-two">
+        <p>
+            <label for="yourInput">Input</label>
+            <input type="text" name="yourInput">
+        </p>
+        <button type="submit">Submit!</button>
+    </form>
+
+    <form id="color-choice">
+        <p>
+            <label for="textColor">Color</label>
+            <input type="text" name="textColor">
+        </p>
+        <button type="submit">Change the Color!</button>
+    </form>
+
     <script src="index.js"></script>
   </body>
    
