Use template literal rather than concatalso combined the forms for age and name, done with same function

--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
             <label for="personName">Name</label>
             <input type="text" name="personName">
         </p>
-        <button type="submit">Go</button>
-    </form>
 
-    <form id="input-two">
         <p>
-            <label for="yourInput">Input</label>
-            <input type="text" name="yourInput">
-        </p>
-        <button type="submit">Submit!</button>
+            <label for="age">Age</label>
+            <input type="number" name="personAge">
+        </p>  
+        <button type="submit">Go</button>
     </form>
 
     <form id="color-choice">
