Added color to the same form and fuser *use para graph creation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>This is my creation!</p>
 
     <div id="stats">
-        <p id="stats-p">This is a paragraph</p>
+
     </div>
 
     <form id="person-form">
@@ -28,15 +28,13 @@
             <label for="age">Age</label>
             <input type="number" name="personAge">
         </p>  
-        <button type="submit">Go</button>
-    </form>
 
-    <form id="color-choice">
         <p>
-            <label for="textColor">Color</label>
-            <input type="text" name="textColor">
+            <label for="favoriteColor">Color</label>
+            <input type="color" name="favoriteColor">
         </p>
-        <button type="submit">Change the Color!</button>
+
+        <button type="submit">Go</button>
     </form>
 
     <script src="index.js"></script>
