--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Person Stats</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" type="text/css" rel="stylesheet"> 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation.min.css" rel="stylesheet"> 
   </head>
 
   <body>
