--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation.min.css" rel="stylesheet"> 
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
